--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -17,6 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/classSchName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/class_schedule"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_marginBottom="12dp" />
 
         <TableLayout
             android:id="@+id/scheduleTable"
